--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@orderly.network/react": "^1.5.17",
+    "@orderly.network/react": "1.5.15",
+    "@orderly.network/web3-onboard": "0.1.24",
+    "@web3-onboard/core": "^2.24.0",
+    "@web3-onboard/react": "^2.11.0",
+    "ethers": "^6.13.5",
     "next": "15.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
